# mafic

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .snyk  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: codeql.yml  lint.yml  publish.yml  release.yml
docs/: conf.py  index.rst  installing.rst
docs/_static/: custom.css
docs/api/: errors-and-warnings.rst  events.rst  filters.rst  index.rst  ip.rst  node-management.rst  node.rst  player.rst  stats.rst  track-and-playlist.rst  utils.rst
docs/extensions/: attributetable.py  exception_hierarchy.py
examples/: simple.py
gabbro/: __init__.py  errors.py  libraries.py
mafic/: __init__.py  __libraries.py  __main__.py  errors.py  events.py  filter.py  ip.py  libraries.py  node.py  player.py  playlist.py  plugin.py  pool.py  region.py  search_type.py  stats.py  strategy.py  track.py  type_variables.py  warnings.py
mafic/typings/: __init__.py  common.py  http.py  incoming.py  misc.py  outgoing.py
mafic/utils/: __init__.py  classproperty.py  decode.py
test_bot/: .dockerignore  .env.example  Dockerfile  docker-compose.multi-node.yml  docker-compose.multi-nodeyml  docker-compose.yml  pyproject.toml
test_bot/bot/: __main__.py
test_bot/gateway-proxy/: noshard.config.json  shard.config.json
test_bot/lavalink/: Dockerfile  application.yml  entrypoint.sh  multi-nodes.json  nodes.json
